# skill

code-operations-plugin/: README.md
code-operations-plugin/.claude-plugin/: plugin.json
engineering-workflow-plugin/: README.md
engineering-workflow-plugin/.claude-plugin/: plugin.json
engineering-workflow-plugin/agents/: plan-implementer.md
engineering-workflow-plugin/agents/ensemble-orchestrator/: AGENT.md
engineering-workflow-plugin/commands/: pr.md
execution-runtime/: .env.example  README.md  pyproject.toml  setup.sh
execution-runtime/api/: __init__.py  code_analysis.py  code_transform.py  filesystem.py  git_operations.py
execution-runtime/execution_runtime/: __init__.py  sessions.py  skills.py
execution-runtime/execution_runtime/security/: __init__.py  import_guard.py
execution-runtime/mcp-server/: mcp_server.py
execution-runtime/mcp-server/security/: pii_detector.py  sandbox.py
playwright-skill/: API_REFERENCE.md  README.md
playwright-skill/.claude-plugin/: marketplace.json  plugin.json
productivity-skills-plugin/: README.md
productivity-skills-plugin/.claude-plugin/: plugin.json
visual-documentation-plugin/: EXAMPLES.md  README.md
visual-documentation-plugin/.claude-plugin/: plugin.json
visual-documentation-plugin/test-outputs/: dashboard-test-monitoring.html  flowchart-test-authentication.html
