[project]
name = "claude-marketplace-execution-runtime"
version = "2.0.0"
description = "Code execution environment for Claude Code - implements Anthropic code execution pattern with 90%+ token savings"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "mhattingpete", email = "noreply@github.com"}
]

dependencies = [
    "fastmcp>=0.2.0",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
    "RestrictedPython>=6.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "mcp-server", "execution_runtime"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]
